--- a/rtl/android/Makefile.fpc
+++ b/rtl/android/Makefile.fpc
@@ -15,7 +15,7 @@ units=$(SYSTEMUNIT) $(SYSINIT_UNITS) $(CPU_UNITS) \
       types  sysconst cthreads $(SORTBASEUNIT) classes $(FGLUNIT)  \
       rtlconsts dos cwstring fpcylix unixcp fpwidestring \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT)
-implicitunits=$(EXEINFOUNIT) $(CP_UNITS) unicodedata
+implicitunits=$(EXEINFOUNIT) $(CP_UNITS) $(UNICODEDATAUNIT)
 rsts=math  typinfo  sysconst rtlconsts
 
 [require]
