--- a/rtl/dragonfly/Makefile.fpc
+++ b/rtl/dragonfly/Makefile.fpc
@@ -65,7 +65,7 @@ SYSTEMUNIT=system
 loaders+=gprt0
 
 ifeq ($(ARCH),x86_64)
-CPU_UNITS=x86 $(PORTSUNIT) cpu
+CPU_UNITS=$(X86UNIT) $(PORTSUNIT) cpu
 endif
 
 
@@ -179,8 +179,6 @@ sysconst$(PPUEXT) : $(OBJPASDIR)/sysconst.pp $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT
 #
 # Other system-independent RTL Units
 #
-
-x86$(PPUEXT) : $(UNIXINC)/x86.pp $(SYSTEMUNIT)$(PPUEXT)
 
 ifneq ($(findstring $(ARCH),x86_64 i386),)
 cpu$(PPUEXT) : $(PROCINC)/cpu.pp $(SYSTEMUNIT)$(PPUEXT) sysutils$(PPUEXT)
