Remove OS rules for mmx unit and use MMXUNIT variable

--- a/rtl/android/Makefile.fpc
+++ b/rtl/android/Makefile.fpc
@@ -63,7 +63,7 @@ ifeq ($(findstring $(ARCH),i386 x86_64 arm),$(ARCH))
 CPU_UNITS=cpu
 endif
 ifeq ($(ARCH),i386)
-CPU_UNITS+=mmx
+CPU_UNITS+=$(MMXUNIT)
 endif
 
 SYSTEMUNIT=system
@@ -206,9 +206,6 @@ else
 cpu$(PPUEXT) : $(PROCINC)/cpu.pp $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT)
 endif
         $(COMPILER) $(PROCINC)/cpu.pp
-
-mmx$(PPUEXT) : $(PROCINC)/mmx.pp cpu$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
-        $(COMPILER) $(PROCINC)/mmx.pp
 
 cthreads$(PPUEXT) : $(UNIXINC)/cthreads.pp $(SYSTEMUNIT)$(PPUEXT)
         $(COMPILER) $(UNIXINC)/cthreads.pp
