--- a/rtl/aros/Makefile.fpc
+++ b/rtl/aros/Makefile.fpc
@@ -56,7 +56,7 @@ endif
 OBJPASDIR=$(RTL)/objpas
 
 ifeq ($(ARCH),i386)
-CPU_UNITS=cpu mmx $(LINEINFOUNIT)
+CPU_UNITS=cpu $(MMXUNIT) $(LINEINFOUNIT)
 endif
 
 ifeq ($(ARCH),x86_64)
