--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -101,7 +101,7 @@ ESPIDF_40100UNIT=System.Espidf_40100
 ESPIDF_40200UNIT=System.Espidf_40200
 ESPIDF_40400UNIT=System.Espidf_40400
 EXEUNIT=OS2Api.exe
-EXEINFOUNIT=System.Exeinfo
+EXEINFOUNIT=System.ExeInfo
 EXTPASUNIT=extpas
 FE310G000UNIT=EmbeddedApi.fe310g000
 FE310G002UNIT=EmbeddedApi.fe310g002
@@ -537,7 +537,6 @@ CP_UNITS_BASE=$(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UN
       $(CP8859_5UNIT) $(CP8859_6UNIT) $(CP8859_7UNIT) $(CP8859_8UNIT) $(CP8859_9UNIT) $(CP8859_10UNIT) $(CP8859_11UNIT) \
       $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT)
 
-CP_UNITS=$(addprefix $(NS_CPUNITS),$(CP_UNITS_BASE))
 CP_UNITS_SRC=$(addsuffix .pas,$(addprefix $(RTL)/charmaps/,$(CP_UNITS)))
 
 [install]
